--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -224,6 +224,8 @@ li a.dropdown-item:focus, li a.dropdown-item:hover {
 /* Carousel */
 .my-carousel {
 	padding: 0;
+	position: relative;
+	top: -5px;
 }
 .my-carousel .carousel-item {
 	display: flex;
